apps/plantsuite/workflows/base/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workflows
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
