apps/plantsuite/workflows/base/server/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: workflows
spec:
  hosts:
    - workflows.plantsuite.svc.cluster.local
  gateways:
    - istio-ingress/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: workflows
